Update `redis emitters` page in the event learning section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -182,7 +182,7 @@ nav:
             - Celery Event Emitter: learn/events/emitters/celery.md
             - Executor Event Emitter: learn/events/emitters/executor.md
             - FastAPI Event Emitter: learn/events/emitters/fastapi/index.md
-            - RQ Event Emitter: learn/events/emitters/rq/index.md
+            - Redis Event Emitter: learn/events/emitters/redis.md
   - API Reference:
       - api/index.md
       - Core:
