--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -183,6 +183,8 @@ nav:
             - Executor Event Emitter: learn/events/emitters/executor.md
             - FastAPI Event Emitter: learn/events/emitters/fastapi.md
             - Redis Event Emitter: learn/events/emitters/redis.md
+      - Reactive:
+        - learn/reactive/index.md
   - API Reference:
       - api/index.md
       - Core:
