--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,7 +70,7 @@ extra:
       - dev
   social:
     - icon: fontawesome/brands/linkedin
-      link: https://ve.linkedin.com/in/manuel-da-pena/en
+      link: https://linkedin.com/in/manuel-da-pena
     - icon: fontawesome/brands/github
       link: https://github.com/mdapena
   analytics:
@@ -160,9 +160,14 @@ markdown_extensions:
   - toc:
       permalink: true
 
+# Extra Stylesheets
+extra_css:
+  - stylesheets/announcement.css
+
 # Extra JavaScript for MathJax
 extra_javascript:
   - javascripts/mathjax.js
+  - javascripts/announcement.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 # Page tree
@@ -173,15 +178,18 @@ nav:
       - learn/index.md
       - Upgrade Guide: learn/upgrade_guide.md
       - Events:
-        - Exploring Event Types: learn/events/event.md
-        - The EventLinker Registry: learn/events/event-linker.md
-        - Master the Event Emitter:
+        - learn/events/index.md
+        - Event Types: learn/events/types.md
+        - Event Linkers: learn/events/linkers.md
+        - Event Emitters:
             - learn/events/emitters/index.md
-            - AsyncIO Event Emitter: learn/events/emitters/asyncio/index.md
-            - Celery Event Emitter: learn/events/emitters/celery/index.md
-            - Executor Event Emitter: learn/events/emitters/executor/index.md
-            - FastAPI Event Emitter: learn/events/emitters/fastapi/index.md
-            - RQ Event Emitter: learn/events/emitters/rq/index.md
+            - AsyncIO Event Emitter: learn/events/emitters/asyncio.md
+            - Celery Event Emitter: learn/events/emitters/celery.md
+            - Executor Event Emitter: learn/events/emitters/executor.md
+            - FastAPI Event Emitter: learn/events/emitters/fastapi.md
+            - Redis Event Emitter: learn/events/emitters/redis.md
+      - Reactive:
+        - learn/reactive/index.md
   - API Reference:
       - api/index.md
       - Core:
